<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.take6.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curtainred"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Picture + heading -->
        <TextView
            android:id="@+id/take6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rio_grande"
            android:layout_marginTop="20dp"
            android:text="@string/take_6"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="80sp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/date_author"
            android:layout_margin="32dp"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/take6"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/game_rules"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_below="@id/description"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/rules_text"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/rules"
            android:textSize="16sp"/>

    </RelativeLayout>
</ScrollView>